# db-importer

./: .gitignore  README.md  example.py  expecteddata.py  issuetracker.py  main.py  pyproject.toml  structcheck.py
.github/workflows/: checks.yml
data/: SQ2024-1450 CAT SC_LCF Summary Data (100924).xlsx  SQ2024-1450 CAT SC_LCF Summary Data (100924).xlsx:Zone.Identifier  baddata.xlsx  importfileskel.xlsx
src/: __init__.py
src/data_info/: units.json
src/dataset/: __init__.py  structpaths.py
src/dbimporter/: __init__.py  check_structure.py  cli.py  expecteddata.py  fix_structure.py  graph_extract.py  issuescheck.py  issuetracker.py  logger.py  main.py  printing.py  restructure.py  structcheck.py  test.py  watcher.py  write_units.py
src/dbimporter/data/: STS2024-33178 (RT01) - PeakData.xlsx  baddata.xlsx  gooddata.xlsx
src/formatopts/: baddatatest.json  cryo_tensile.json  format_init.py  hightemp_tensile.json  temp_data.json  tensiledata.json
tests/: test_filehandle.py  test_fixissues.py  test_setup.py  test_testing.py
